<resources>
    <string name="app_name">BlueFlyVario</string>
    <string name="title_devices">Devices</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_parameters">Parameters</string>
    <string name="about">About</string>
    <string name="altitude">Altitude:</string>
    <string name="altitude_value">%1$sm</string>
    <string name="hwversion">HwVersion:</string>
    <string name="battery">Battery:</string>
    <string name="battery_value">%1$s%%(%2$sV)</string>
    <string name="temperature">Temperature:</string>
    <string name="temperature_value">%1$s°C</string>
    <string name="vario"><b>%1$sm/s</b></string>

    <string name="about_app">
        \n<big><b>BlueFlyVario Android app</b></big>
        \n
        \nKalman Filter Vario code from by BlueFlyVario flight instrument creator
        \n<b>Alistair Dickie</b>
        \nhttps://www.blueflyvario.com
        \n
        \n
        \n<b>Author: Deni Bakovic</b>
    </string>

    <string name="raw_data_stream"><u>Data Stream:</u></string>
    <string name="sendCommand">Send Command</string>
    <string name="dryRun">Dry run</string>
    <string name="paired_devices">Paired Devices:</string>
    <string name="default_parameter">Default:</string>
    <string name="no_paired_devices">No paired devices!</string>
    <string name="connected_to">"Connected to %1$s"</string>
    <string name="connecting">Connecting ..</string>
    <string name="disconnected">Disconnected!</string>
    <string name="no_bluetooth">Phone doesn\'t have bluetooth!</string>
    <string name="bluetooth_off">Bluetooth disabled!</string>
    <string name="vario_title"><u>Vario:</u></string>

</resources>