<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.bfv.BFVAndroid.fragments.devices.DevicesFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices" >
        <action
            android:id="@+id/action_navigation_devices_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bfv.BFVAndroid.fragments.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_parameters"
            app:destination="@id/navigation_parameters" />
    </fragment>

    <fragment
        android:id="@+id/navigation_parameters"
        android:name="com.bfv.BFVAndroid.fragments.parameters.ParametersFragment"
        android:label="@string/title_parameters"
        tools:layout="@layout/fragment_parameters" >
        <action
            android:id="@+id/action_navigation_parameters_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>